# matchete

./: .gitignore  Cargo.toml  README.md
examples/: analysis.rs  common.rs  multimatcher.rs  multimetric.rs  numeric.rs  string.rs
src/: assessor.rs  common.rs  composite.rs  core.rs  custom.rs  lib.rs  matcher.rs  mod.rs  presets.rs  types.rs  utils.rs  weighted.rs
src/metrics/: mod.rs  numeric.rs  phonetic.rs  presets.rs  string.rs
src/prelude/: mod.rs  numeric.rs  phonetic.rs  string.rs  utils.rs
src/prelude/string/: ensemble.rs  exact.rs  format.rs  fuzzy.rs  lexical.rs  mod.rs  phonetic.rs  proximity.rs  structural.rs  utils.rs
